semaforo y reporte de final de carrera